# cpp-neural-network

./: .gitignore  CMakeLists.txt  README.md
include/: ActivationF.hpp  Layer.h  Layer.hpp  Loss.h  Loss.hpp  Network.h  Network.hpp
src/: Activation.cpp  Layer.cpp  Loss.cpp  Main.cpp  Network.cpp  main.cpp
